--- a/thesis.html
+++ b/thesis.html
@@ -17,7 +17,7 @@
 
         <div class='header-container'>
                     <div class="empty-space-container">
-                        <a href="home.html"><img class="home-button" src="images/home.png"/></a>
+                        <a href="index.html"><img class="home-button" src="images/home.png"/></a>
                     </div>
                     <div class='top-line'></div>
         </div>
