made the website link strong

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
                     <div class='introduction'><em>Hi, my name is Tom Bellens and I'm very excited to get started with the Switchfully-training. Before this I was a student of history at the VUB
                 where I wrote a master's thesis on the first years of the Cold War in Belgium. Since September I live in Leuven with my girlfriend, Chrissy. My future employer will be the Colruyt Group.
-                 I started programming for fun when I was in High School. My father taught me the basis principles and together we built <a href="http://www.artsenhoek.be/">a website</a> for my mother's practice.  I mainly used Java so this is the first website I built from scratch. You will find more information about my interests, my master's thesis and The Boring Company.   </em>
+                 I started programming for fun when I was in High School. My father taught me the basis principles and together we built <strong><a href="http://www.artsenhoek.be/">a website</a></strong> for my mother's practice.  I mainly used Java so this is the first website I built from scratch. You will find more information about my interests, my master's thesis and The Boring Company.   </em>
              </div>
          </div>
             <div class='short-info-container'>
